eclService and entityService sonar