@@ -1,7 +1,5 @@
 package org.endeavourhealth.imapi.logic.service;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import org.endeavourhealth.imapi.dataaccess.QueryRepository;
 import org.endeavourhealth.imapi.dataaccess.SetRepository;
 import org.endeavourhealth.imapi.model.customexceptions.EclFormatException;
 import org.endeavourhealth.imapi.model.eclBuilder.BoolGroup;
@@ -18,19 +16,14 @@ import org.endeavourhealth.imapi.transforms.ECLBuilderToIMQ;
 import org.endeavourhealth.imapi.transforms.ECLToIMQ;
 import org.endeavourhealth.imapi.transforms.IMQToECL;
 import org.endeavourhealth.imapi.transforms.IMQToECLBuilder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.zip.DataFormatException;
 
 @Component
 public class EclService {
-  private static final Logger LOG = LoggerFactory.getLogger((EclService.class));
-  private final QueryRepository queryRepository = new QueryRepository();
   private final SetRepository setRepository = new SetRepository();
 
   public String getEcl(Query inferred) throws QueryException {
@@ -42,11 +35,11 @@ public class EclService {
     return setRepository.getSetExpansionTotalCount(request.getEclQuery(), request.isIncludeLegacy(), request.getStatusFilter(), List.of());
   }
 
-  public Set<Concept> evaluateECLQuery(EclSearchRequest request) throws JsonProcessingException, QueryException {
+  public Set<Concept> evaluateECLQuery(EclSearchRequest request) throws QueryException {
     return setRepository.getSetExpansion(request.getEclQuery(), request.isIncludeLegacy(), request.getStatusFilter(), List.of(), new Page().setPageNumber(request.getPage()).setPageSize(request.getSize()));
   }
 
-  public SearchResponse eclSearch(EclSearchRequest request) throws JsonProcessingException, QueryException {
+  public SearchResponse eclSearch(EclSearchRequest request) throws QueryException {
     int totalCount = getEclSearchTotalCount(request);
     Set<Concept> evaluated = evaluateECLQuery(request);
     List<SearchResultSummary> evaluatedAsSummary = evaluated
@@ -59,7 +52,7 @@ public class EclService {
           .setScheme(concept.getScheme())
           .setStatus(concept.getStatus())
           .setEntityType(concept.getEntityType())
-      ).collect(Collectors.toList());
+      ).toList();
     SearchResponse result = new SearchResponse();
     result.setEntities(evaluatedAsSummary);
     result.setCount(totalCount);
